[PWA] noscript tag

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
         <!-- built files will be auto injected -->
         <script src="/static/wcs/waf.js"></script>
+    <noscript>100% PWA achieved</noscript>
 </body>
 
 </html>
